data/aws-easy/codeparrot-tf/workspaces_ip_group/sample-77/main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
    }
  }
}

# Provider AWS security group
# IAM Role: Allow the VPC to read ECS instances from the internet
resource "aws_security_group" "name_0" {
  name        = "ec2demo"
  description = "Allow the VPC to read ECS instances from the internet"
  vpc_id      = "${aws_vpc.demo.id}"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# create a workspace ip group
resource "aws_security_group" "name_1" {
  name        = "workspace"
  description = "Allow the VPC to read ECS instances from the internet"
  vpc_id      = "${aws_vpc.demo.id}"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
